Colaboratory를 통해 생성됨

--- a/introduction_to_data_analysis.ipynb
+++ b/introduction_to_data_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1mIKj2SCivxaNHpGxdSKpGqTME0OVzGSY",
-      "authorship_tag": "ABX9TyPLFNcbru418IH34Glv9DOZ",
+      "authorship_tag": "ABX9TyN+5S2VM0VPkd+e69FxUkvO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,49 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jjjjpr/archive/blob/main/introduction_to_data_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HWgEGmuwWcWn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "introduction to DAta Analysis\n",
+        "\n",
+        "This notebook serves as a ~"
+      ],
+      "metadata": {
+        "id": "d5b4dureVmDA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd /content/drive/MyDrive/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R64EDHc1ZUl3",
+        "outputId": "c71876f7-56b5-402c-ec41-5b4da3fa70b3"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive\n"
+          ]
+        }
       ]
     },
     {
@@ -80,13 +123,32 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clome https://github.com/ikwak2/Hands-On-Data-Analysis-with-Pandas-2nd-edition.git"
+        "!git clone https://github.com/ikwak2/Hands-On-Data-Analysis-with-Pandas-2nd-edition.git"
       ],
       "metadata": {
-        "id": "tYiWcZ27Srif"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tYiWcZ27Srif",
+        "outputId": "cee213f4-ab3f-4de5-ac09-f63afddd5c13"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Hands-On-Data-Analysis-with-Pandas-2nd-edition'...\n",
+            "remote: Enumerating objects: 3258, done.\u001b[K\n",
+            "remote: Counting objects: 100% (3258/3258), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (1163/1163), done.\u001b[K\n",
+            "remote: Total 3258 (delta 2046), reused 3218 (delta 2041), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (3258/3258), 74.98 MiB | 12.35 MiB/s, done.\n",
+            "Resolving deltas: 100% (2046/2046), done.\n",
+            "Updating files: 100% (210/210), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
